--- a/services/helios.identity/helios.identity.client/src/styles/index.scss
+++ b/services/helios.identity/helios.identity.client/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import 'bootstrap/scss/bootstrap';
+// @import 'bootstrap/scss/bootstrap';
 
 :root {
 	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -22,16 +22,4 @@
 	align-items: center;
 	min-width: 100vw;
 	min-height: 100vh;
-}
-
-.btn-icon {
-	display: flex !important;
-	justify-content: center;
-	align-items: center;
-}
-
-.sidenav {
-	height: 100%;
-	width: 100%;
-	border-top: 1px solid rgba($secondary, 0.25);
 }
